Fix layout issues (#20)
* set max-width on .container, and remove max-width from .child-card

* Update README.md

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -19,8 +19,11 @@ h5 {
   letter-spacing: -0.075rem;
 }
 
-.child-card {
+.container {
   max-width: 720px;
+}
+
+.child-card {
   box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
   border-radius: 0.75rem;
 }
